kubernetes/apps/main/storage/garage/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 403"]
spec:
  hostnames:
    - "s3.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: garage
          port: 3900
